--- a/experiment/experiments.ipynb
+++ b/experiment/experiments.ipynb
@@ -4,6 +4,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x: int = 2\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd "
@@ -15,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/home/marwane/mlops-projects/first-end-to-end-mlops-project/data/playground-series-s3e8/train.csv\")\n"
+    "df = pd.read_csv(\"/home/marwane/mlops-projects/first-end-to-end-mlops-project/data/playground-series-s3e8/train.csv\")"
    ]
   },
   {
@@ -1687,7 +1708,7 @@
    "source": [
     "cut_categories = [\"Fair\", \"Good\", \"Very Good\", \"Premium\", \"Ideal\"]\n",
     "color_categories = [\"D\", \"E\", \"F\", \"G\", \"H\", \"I\", \"J\"]\n",
-    "clarity_categories =  [\"I1\", \"SI2\", \"SI1\", \"VS2\", \"VS1\", \"VVS2\", \"VVS1\", \"IF\"]"
+    "clarity_categories =  [\" I1\", \"SI2\", \"SI1\", \"VS2\", \"VS1\", \"VVS2\", \"VVS1\", \"IF\"]"
    ]
   },
   {
